--- a/character/templates/character/character_list.html
+++ b/character/templates/character/character_list.html
@@ -23,9 +23,7 @@
             {% for character in page_obj %}
                 <tr>
                     <td><a href={{ character.get_absolute_url }}>{{ character }}</a></td>
-                    {% with user=character.player.user %}
-                        <td><p>{{ user }}</p></td>
-                    {% endwith %}
+                    <td><p>{{ character.user }}</p></td>
                     <td><p>{{ character.get_race_display }}</p></td>
                     <td><p>{{ character.xp }}</p></td>
                     <td>
