--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -69,31 +69,32 @@ ul.errorlist {
 
 #game {
     position: relative;
-    height: 52em;
 }
 
 #events {
-    position: absolute;
-    left: 35em;
-    width: 102em;
-    height: 40em;
+    left: 47em;
+    box-sizing: border-box;
+    width: calc(100% - 45em - 2em);
+    height: 31em;
 }
 
 #messaging {
     position: relative;
-    top: 42em;
-    left: 36em;
-    width: 100em;
+    left: 47em;
+    box-sizing: border-box;
+    width: calc(100% - 45em - 2em);
+}
+
+#panel {
+    position: absolute;
+    top: 0;
 }
 
 #characters {
-    position: relative;
-    top: 0;
-    width: 33em;
+    width: 45em;
+    margin-bottom: 1em;
 }
 
 #master {
-    position: relative;
-    top: 2em;
-    width: 33em;
+    width: 45em;
 }
