--- a/game/templates/game/game_create_error.html
+++ b/game/templates/game/game_create_error.html
@@ -4,7 +4,7 @@
     <div class="info rpgui-container framed-golden">
         <h1>Role play</h1>
         <p>The game cannot be created:</p>
-        <ul><li>The story {{ story_slug }} does not exist...</li></ul>
+        <ul><li>The campaign {{ campaign_slug }} does not exist...</li></ul>
         <div class="rpgui-center">
             <a href={% url 'index' %}><button class="rpgui-button"><p>Return to main menu</p></button></a>
         </div>
