--- a/game/templates/game/game_list.html
+++ b/game/templates/game/game_list.html
@@ -38,7 +38,7 @@
         <div class="rpgui-center">
             {% include 'pagination.html' %}
             {% if user.is_authenticated %}
-                <a href="{% url 'story-create' %}">
+                <a href="{% url 'campaign-create' %}">
                     <button class="rpgui-button"><p>Create a new game</p></button>
                 </a>
             {% endif %}
