--- a/master/templates/master/campaign_create.html
+++ b/master/templates/master/campaign_create.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <div class="rpgui-container framed-golden">
-        <h1>{{ story }}</h1>
+        <h1>New campaign</h1>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <div class="rpgui-center">
-                <button class="rpgui-button" type="submit"><p>Update</p></button>
+                <button class="rpgui-button" type="submit"><p>Submit</p></button>
             </div>
         </form>
     </div>
