--- a/character/templates/character/character.html
+++ b/character/templates/character/character.html
@@ -13,6 +13,24 @@
         <p>XP: {{ character.xp }}</p>
         <p>HP: {{ character.hp }} / {{ character.max_hp }}</p>
 
+        <h3>Abilities</h3>
+        <p>Strength: {{ character.strength }}</p>
+        <p>Dexterity: {{ character.dexterity }}</p>
+        <p>Constitution: {{ character.constitution }}</p>
+        <p>Intelligence: {{ character.intelligence }}</p>
+        <p>Wisdom: {{ character.wisdom }}</p>
+        <p>Charisma: {{ character.charisma }}</p>
+        {% for ability in character.abilities.all %}
+            <p>{{ ability }}</p>
+        {% empty %}
+            <p>-</p>
+        {% endfor %}
+
+        <h3>Languages</h3>
+        {% for language in character.languages.all %}
+            <p>{{ language.get_name_display }}</p>
+        {% endfor %}
+
         <hr/>
 
         {% with game=character.player.game %}
