feat: Equipment is added in character's inventory

--- a/character/templates/character/character.html
+++ b/character/templates/character/character.html
@@ -103,6 +103,11 @@
         </div>
         <br />
 
+        <h3>Inventory</h3>
+        {% for equipment in inventory %}
+            <p>{{ equipment }}</p>
+        {% endfor %}
+
         <hr/>
 
         <h3>Game</h3>
