--- a/character/templates/character/character.html
+++ b/character/templates/character/character.html
@@ -28,6 +28,16 @@
 
         <table id="main">
             <tr>
+                <td id="hp">
+                    <table class="rpgui-container framed-golden">
+                        <tr>
+                            <td><p>HP: {{ character.hp }} / {{ character.max_hp }}</p></td>
+                        </tr>
+                        <tr>
+                            <td><div data-value="{% widthratio character.hp character.max_hp 1 %}" class="rpgui-progress red"></div></td>
+                        </tr>
+                    </table>
+                </td>
                 <td id="abilities">
                     <table class="rpgui-container framed-golden">
                         <tr><th colspan="3"><h3>Abilities</h3></th></tr>
@@ -103,12 +113,6 @@
             </tr>
         </table>
 
-        <h3>HP</h3>
-        <div class="rpgui-center">
-            <p>Current HP: {{ character.hp }} / Maximum HP: {{ character.max_hp }}</p>
-            <div id="hp-bar" data-value="{% widthratio character.hp character.max_hp 1 %}" class="rpgui-progress red"></div>
-        </div>
-        <br />
 
         <hr/>
 
